# src/routes/meetingRoutes.js
@@ -1,7 +1,15 @@
-const express = require('express');
-const router = express.Router();
-const meetingController = require('../controllers/meeting.controller');
+// routes/meetingRoutes.js
+const express = require("express");
+const controller = require("../controllers/meetingController");
+const { authenticate } = require("../middleware/authMiddleware");
 
-router.post('/create', meetingController.createMeeting);
+const router = express.Router();
+
+router.post("/", authenticate, controller.create);
+router.get("/", authenticate, controller.getAll);
+router.get("/search", authenticate, controller.search);
+router.get("/:id", authenticate, controller.getById);
+router.put("/:id", authenticate, controller.update);
+router.delete("/:id", authenticate, controller.delete);
 
 module.exports = router;
